--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorPrimaryVariant"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn"
+        android:id="@+id/loginBtn"
         android:layout_below="@+id/password"
         android:text="LOGIN"
         android:layout_marginTop="20dp"
@@ -82,7 +82,7 @@
         android:layout_below="@+id/password"
         android:layout_marginStart="180dp"
         android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/btn"
+        android:layout_toRightOf="@id/loginBtn"
         android:gravity="center"
         android:text="REGISTER" />
 
