--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegisterPage">
@@ -88,7 +92,7 @@
         android:hint="Email"
         android:layout_margin="20dp"
         android:padding="10dp"
-        android:drawableLeft="@drawable/baseline_password_24"
+        android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="10dp" />
 
     <EditText
@@ -99,7 +103,7 @@
         android:hint="Password"
         android:layout_margin="20dp"
         android:padding="10dp"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="10dp" />
 
     <Button
@@ -112,6 +116,5 @@
         android:text="REGISTER"
         android:onClick="submit"/>
 
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
