--- a/app/src/main/res/layout/activity_total.xml
+++ b/app/src/main/res/layout/activity_total.xml
@@ -6,23 +6,8 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <!-- Date TextView -->
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="#000000" />
-
-    <!-- Value TextView -->
-    <TextView
-        android:id="@+id/valueTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="#000000" />
-
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/barChart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
