--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/timerText"
-        android:layout_width="214dp"
-        android:layout_height="89dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="268dp"
-        android:padding="10dp"
-        android:text="Timer Result"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.564"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -77,6 +62,19 @@
             android:text="Home Page"
             android:textSize="25dp"
             android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/LogoutButton"
+            android:layout_width="50dp"
+            android:layout_height="54dp"
+            android:layout_marginLeft="100dp"
+            android:background="@color/white"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.865"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/baseline_logout_24" />
     </androidx.appcompat.widget.Toolbar>
 
     <Chronometer
@@ -100,16 +98,13 @@
 
     <Button
         android:id="@+id/start"
-        android:layout_width="115dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="184dp"
-        android:layout_marginEnd="163dp"
+        android:layout_marginEnd="80dp"
         android:text="Start"
         app:layout_constraintEnd_toEndOf="@id/timer"
-        app:layout_constraintHorizontal_bias="0.585"
-        app:layout_constraintStart_toEndOf="@+id/timer"
-        app:layout_constraintStart_toStartOf="@id/timer"
-        app:layout_constraintTop_toBottomOf="@+id/timer" />
+        app:layout_constraintHorizontal_bias="0.585" />
 
 </RelativeLayout>
