--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="110dp"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -85,7 +85,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="22dp"
-        android:layout_marginEnd="115dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#092FEC"
